--- a/src/styles/elements/_images.scss
+++ b/src/styles/elements/_images.scss
@@ -2,7 +2,7 @@
 
 .image {
 	&.logo {
-		background-image: url(../../images/logo.png);
+		background-image: url(/images/logo.png);
 		width: 160px;
 		height: 40px;
 		display: block;
