--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -187,7 +187,7 @@ iframe {
 
 @include respond-at(false, 485px) {
 	.container {
-		padding: 0 $pad / 2;
+		padding: 0 calc($pad / 2);
 	}
 	h1 {
 		font-size: 20px;
