--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,8 @@
 // Normalize
 @import 'normalize.css';
 
+@import url(http://fonts.googleapis.com/css?family=Lato:300italic,400italic,600italic,400,300,600,700);
+
 // Elements
 @import 'elements/buttons';
 @import 'elements/images';
