--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,7 +3,7 @@
 // Normalize
 @import 'normalize.css';
 
-@import url(http://fonts.googleapis.com/css?family=Lato:300italic,400italic,600italic,400,300,600,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:300italic,400italic,600italic,400,300,600,700);
 
 // Elements
 @import 'elements/buttons';
